2008-02-12  Inge Wallin  <inge@lysator.liu.se>

	Only show tile creation dialog in the Widget, not the Map
	* src/lib/marbleMap.h (creatingTilesstart): removed
	* src/lib/MarbleMap.cpp (construct): Initialize width, height here
	(construct): Remove connect() for signal creatingTilesStart 
	(creatingTilesStart): removed

2008-02-11  Torsten Rahn  <rahn@kde.org>

    * data/CMakeLists.txt:
    * src/lib/TextureColorizer.{cpp,h}:
    * src/lib/texturepalette.cpp: deleted

    Patch by Ismael Asensio to make marble use the .leg files 
    instead of using the hardcoded values in texturepalette.cpp.

2008-02-10  Inge Wallin  <inge@lysator.liu.se>

	Fix issue with integer overflow and some cleaning
	* src/lib/GlobeScanlineTextureMapper.cpp (mapTexture): Use qint64
	* src/lib/TextureColorizer.cpp (colorize): Use qint64
	* src/lib/MarbleMap.cpp (drawFog): call globeCoversImage
	* src/lib/VectorMap.cpp (sphericalCreateFromPntMap): use doubles
	(sphericalPaintBase): use doubles
	* src/lib/PlaceMarkLayout.cpp: cleaning

2008-02-09  Inge Wallin  <inge@lysator.liu.se>

	API change, and remove irritating qDebug()s
	* src/lib/MarbleWidget.{h,cpp} (setProjection): Take Projection
	argument
	(zoomView): Fix bug ==  ->  =
	(*): Disable irritating qDebug()s.
	* src/lib/MarbleMap.{h,cpp} (setProjection): Take Projection
	argument
	(*): Disable irritating qDebug()s.
	(enableInput, disableInput): removed
	* src/marble_part.cpp: Call with Projection parameters
	* src/lib/MarbleModel.cpp (*): Disable irritating qDebug()s.
	* src/lib/MarbleControlBox.{h,cpp}: projection signals and slots
	take a Projection
	* src/lib/PlaceMarkLayout.cpp: Remove irritating qDebug()s.
	* src/lib/TileLoader.cpp: Remove irritating qDebug()s.

	Fix all zoom issues.
	* src/lib/MarbleWidget.cpp (zoomView): Use MarbleMap correctly
	(zoomIn, zoomOut): call functions in MarbleMap.
	* src/lib/MarbleMap.cpp (zoomView): Do the correct thing.

	Fix resizing and projection changes for real